fix: arrow as height as the box. changed margin of arrow and changed alignement of checkboxes to left
git-svn-id: http://halodev.ontoprise.com/svn/HaloSMWExtension/trunk@9085 f80b7aa0-dfcc-4e65-a0d9-74108174cbc8

--- a/extensions/DataImport/skins/TermImport/termimport.css
+++ b/extensions/DataImport/skins/TermImport/termimport.css
@@ -265,7 +265,7 @@ a:hover {text-decoration:underline; cursor: pointer; cursor: hand;}
 .arrow{
 	height: 214px;
 	float: left;
-	padding: 10px 10px 3px 10px;
+	padding: 40px 5px 0px 5px;
 }
 .inputfield{
 	border: 1px solid #AAAAAA;
